[Back-End] All checkstyle, pmd, findbugs erros gone!